# pge

./: .gitignore  AGENTS.md  CMakeLists.txt  Cargo.toml  ai.ts  build.zig  build.zig.zon  clear.sh  graphics.h  onshapeToURDF.ts  package.json  pgs  physics.h  readme.md  repomix.sh  run.sh  test.bat  test.sh
.github/workflows/: build.yml
assets/puppyarm/: puppyarm.urdf
assets/puppyarm/meshes/: Part_1__2_3.stl  Part_1__2_4.stl  Part_1__3.stl  Part_1__5.stl  Part_1__6.stl  Part_1__7.stl  Part_1__8.stl  XG_ZIJI_16__1.stl  servo_bolt__11.stl  v2__1_2.stl
editor/src/: main.rs
examples/cube/src/: main.rs
examples/fps/: Cargo.toml
examples/fps/src/: main.rs
examples/puppyarm/: Cargo.toml
examples/puppyarm/src/: main.rs
examples/ui/: Cargo.toml
examples/ui/src/: main.rs
src/: arena.rs  buffer.rs  compositor.rs  debug.rs  editor.rs  engine.h  engine.rs  fps_example.c  gltf.rs  gui.rs  hardware.rs  interface.h  interface_test.c  lib.rs  log.rs  mac_interface.c  mac_interface.m  mac_main.m  mock_hardware.rs  orbit.rs  physics.h  physics.rs  physics.zig  physics_tests.c  shaders.metal  state.rs  test.h  test_main.c  tests.rs  types.rs  urdf.rs  utility.rs
src/physics/: mod.rs  tests.rs
src/wgpu/: hardware.rs
