[package]
name = "fps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
pge = { path = "../../", features = ["wgpu_winit"] }
async-trait = "0.1"
anyhow = "1"
glam = "0.27"
log = "0.4"
rand = "0.8.5"
